--- a/src/components/alg/alg-ta/ta2/pages/elem-l1adz.html
+++ b/src/components/alg/alg-ta/ta2/pages/elem-l1adz.html
@@ -10,3 +10,252 @@
   <p><a href="https://contest.yandex.ru/contest/28724/problems/" target="_blank">contest.yandex.ru/contest/28724/problems</a></p>
 </article>
 
+
+<!-- Содержание -->
+<article class="article">
+  <h3>Содержание</h3>
+
+      <a href="#t1">A. Сложное уравнение</a>
+  <br><a href="#t2">B. Параллелограмм</a>
+  <br><a href="#t3">C. Проверьте правильность ситуации</a>
+  <br><a href="#t4">D. Футурама</a>
+  <br><a href="#t5">E. Another Pair of Triangles</a>
+</article>
+
+
+<!-- A. Сложное уравнение -->
+<article class="article">
+  <div class="anchor" id="t1"></div>
+  <h3>A. Сложное уравнение</h3>
+
+  <div class="time-memory">(Время 1с. Память 64мб)</div>
+
+  <p>Решить в целых числах уравнение (a * x + b) / (c * x + d) = 0</p>
+
+  <h4>Формат ввода</h4>
+  <p>Вводятся 4 числа: a, b, c и d; c и d не равны нулю одновременно.</p>
+
+  <h4>Формат вывода</h4>
+  <p>Необходимо вывести все целочисленные решения, если их число конечно, “NO” (без кавычек), если целочисленных решений нет, и “INF” (без кавычек), если их бесконечно много.</p>
+
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+<pre>
+1
+1
+2
+2
+</pre>
+    <code>NO</code>
+
+    <h4>Пример 2</h4>
+<pre>
+2
+-4
+7
+1
+</pre>
+    <code>2</code>
+
+    <h4>Пример 3</h4>
+<pre>
+  35
+  14
+  11
+  -3
+</pre>
+    <code>NO</code>
+  </details>
+</article>
+
+
+<!-- B. Параллелограмм -->
+<article class="article">
+  <div class="anchor" id="t2"></div>
+  <h3>B. Параллелограмм</h3>
+
+  <div class="time-memory">(Время 1с. Память 64мб)</div>
+
+  <p>На уроке геометрии семиклассники Вася и Петя узнали, что такое параллелограмм. На перемене после урока они стали играть в игру: Петя называл координаты четырех точек в произвольном порядке, а Вася должен был ответить, являются ли эти точки вершинами параллелограмма.</p>
+
+  <p>Вася, если честно, не очень понял тему про параллелограммы, и ему требуется программа, умеющая правильно отвечать на Петины вопросы.</p>
+
+  <p>Напомним, что параллелограммом называется четырехугольник, противоположные стороны которого равны и параллельны.</p>
+
+  <h4>Формат ввода</h4>
+  <p>В первой строке входного файла записано целое число N (1 ≤ N ≤ 10) - количество заданных Петей вопросов. Каждая из N последующих строк содержит описание четырех точек - четыре пары целых чисел X и Y (-100 ≤ X ≤ 100, -100 ≤ Y ≤ 100), обозначающих координаты точки. Гарантируется, что четыре точки, о которых идет речь в одном вопросе, не лежат на одной прямой.</p>
+
+  <h4>Формат вывода</h4>
+  <p>Для каждого из вопросов выведите "YES", если четыре заданные точки могут образовать параллелограмм, и "NO" в противном случае. Ответ на каждый из запросов должен быть в отдельной строке без кавычек.</p>
+
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+<pre>
+3
+1 1 4 2 3 0 2 3
+1 1 5 2 2 3 3 0
+0 0 5 1 6 3 1 2
+</pre>
+<pre>
+YES
+NO
+YES
+</pre>
+  </details>
+</article>
+
+
+<!-- C. Проверьте правильность ситуации -->
+<article class="article">
+  <div class="anchor" id="t3"></div>
+  <h3>C. Проверьте правильность ситуации</h3>
+
+  <div class="time-memory">(Время 1с. Память 64мб)</div>
+
+  <p>Напишите программу, которая по изображению поля для игры в «Крестики-нолики» определит, могла ли такая ситуация возникнуть в результате игры с соблюдением всех правил.</p>
+
+  <p>Напомним, что игра в «Крестики-нолики» ведется на поле 3*3. Два игрока ходят по очереди. Первый ставит крестик, а второй – нолик. Ставить крестик и нолик разрешается в любую еще не занятую клетку поля. Когда один из игроков поставит три своих знака в одной горизонтали, вертикали или диагонали, или когда все клетки поля окажутся заняты, игра заканчивается.</p>
+
+  <h4>Формат ввода</h4>
+  <p>Вводится три строки по три числа в каждой, описывающих игровое поле. Число 0 обозначает пустую клетку, 1 – крестик, 2 – нолик. Числа в строке разделяются пробелами.</p>
+
+  <h4>Формат вывода</h4>
+  <p>Требуется вывести слово YES, если указанная ситуация могла возникнуть в ходе игры, и NO в противном случае.</p>
+
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+<pre>
+1 1 1
+1 1 1
+1 1 1
+</pre>
+    <code>NO</code>
+
+    <h4>Пример 2</h4>
+<pre>
+2 1 1
+1 1 2
+2 2 1
+</pre>
+    <code>YES</code>
+
+    <h4>Пример 3</h4>
+<pre>
+1 1 1
+2 0 2
+0 0 0
+</pre>
+    <code>YES</code>
+
+    <h4>Пример 4</h4>
+<pre>
+0 0 0
+0 1 0
+0 0 0
+</pre>
+    <code>YES</code>
+  </details>
+</article>
+
+
+<!-- D. Футурама -->
+<article class="article">
+  <div class="anchor" id="t4"></div>
+  <h3>D. Футурама</h3>
+
+  <div class="time-memory">(Время 1с. Память 64мб)</div>
+
+  <p>С помощью изобретенной профессором машины Фарнсворт и Эми меняются телами с целью осуществить свои мечты: профессор жаждет острых ощущений, а Эми мечтает есть от пуза, не опасаясь за фигуру. Впоследствии выясняется, что обмен разумом между двумя телами возможен не более одного раза, и чтобы вернуться обратно в свои тела нужно произвести промежуточный обмен. Бендер предлагает свою помощь, однако, заполучив тело Эми, он тут же скрывается, чтобы под чужой личиной украсть корону императора Робо-Венгрии.</p>
+
+  <p>Эми, недовольная возможностями профессорского тела в плане обжорства, уговаривает поменяться Лилу. Фрай приходит в ужас. Лила обижена и обвиняет Фрая в том, что его заботит только ее внешность. Фрай в отместку меняется телами с Зойдбергом.</p>
+
+  <p>Бендер оказывается пойман при попытке ограбления, однако освобождается, убедив императора в том, что он - робот в теле человека. Узнав, что император втайне мечтает пожить немного жизнью простых людей, Бендер предлагает тому на время поменяться телами. Но так как Профессор уехал рисковать жизнью в теле Бендера, пришлось подсунуть императору вместо своего корпуса автоматизированное помойное ведро.</p>
+
+  <p>Фрай в теле Зойдберга и Лила в теле Профессора встречаются в ресторане, чтобы выяснить отношения. В конце концов они понимают, что любят друг друга вовсе не за внешность. При виде сцены их бурного примирения Эми, на этот раз уже в теле Гермеса, надолго теряет аппетит.</p>
+
+  <p>Бендер, поменявшись телами с правителем Робо-Венгрии, наслаждается жизнью на его яхте. Однако именно в этот вечер заговорщики совершают покушение на императора. Жизнь Бендеру спасает появление профессора Фарнсворта.</p>
+
+  <p>После того, как все герои решают свои личные проблемы, профессору с помощью Бубльгума Тэйта и Сладкого Клайда из команды "Ударники" удается вернуть всех в свои тела.</p>
+
+  <p>"Футурама". Десятый эпизод шестого сезона.</p>
+
+  <p>В очередной серии Футурамы было проведено несколько обменов разумами между телами героев,но, по крайней мере Бубльгум Тэйт и Сладкий Клайд в обменах не участвовали. Теперь необходимо вернутьразумы всех героев в свои тела. К сожалению, два тела могут участвовать только в одном обмене,поэтому обратные обмены для этого произвести невозможно. Например, если тело 1поменялось разумом с телом 2, а потом тело 1 поменялось разумом с телом 3,то в теле 1 находится разум третьего героя, в теле 2 - разум первого героя,а в теле 3 - второго.Теперь можно произвести обмен разумами только между телами 2 и 3, тогда разум второго героявернется в свое тело, а первому и третьему героям могут помочь только Тэйт с Клайдом.</p>
+
+  <p>Помогите героям Футурамы вернуться в свои тела.</p>
+
+  <h4>Формат ввода</h4>
+  <p>Во входном файле записаны целые числа N (4 ≤ N ≤ 20) и M(1 ≤ M ≤ 100) - количество героев Футурамы и количество произведенных обменов разумами.Герои занумерованы числами от 1 до N, изначально разум каждого из героев находится в своем теле. В последующих M строчках записана последовательность совершенных обменов разумами. Каждый обмен описывается двумя различными числами - номерами тел, которые, в этом обмене меняются разумами. Бубльгум Тэйт и Сладкий Клайд, как наиболее разумные герои, имеют номера N-1 и N, и гарантируется, что в исходных обменах они не участвовали.</p>
+
+  <h4>Формат вывода</h4>
+  <p>Выведите план обменов для возвращения разумов героев в свои телав виде пар различных чисел - номеров тел которые участвовали в соответствующем обмене.Причем никакие два тела не должны обмениваться между собой разумами более одного раза,включая исходные обмены. Если обменов не требуется, то можно ничего не выводить.Если планов обменов несколько, то выведите любой из них (не обязательно минимальный).</p>
+
+  <p>Вернуть разумы героев в свои тела всегда возможно.</p>
+
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+<pre>
+4 1
+1 2
+</pre>
+<pre>
+1 3
+2 4
+1 4
+2 3
+3 4
+</pre>
+
+    <h4>Пример 2</h4>
+<pre>
+5 1
+1 2
+</pre>
+<pre>
+1 4
+2 5
+1 5
+2 4
+4 5
+</pre>
+  </details>
+</article>
+
+
+<!-- E. Another Pair of Triangles -->
+<article class="article">
+  <div class="anchor" id="t5"></div>
+  <h3>E. Another Pair of Triangles</h3>
+
+  <div class="time-memory">(Время 2с. Память 512мб)</div>
+
+  <p>Среди треугольников периметра P с целыми длинами сторон найдите треугольник наибольшей и наименьшей ненулевой площади.</p>
+
+  <h4>Формат ввода</h4>
+  <p></p>Входные данные содержат одно целое число P — периметр треугольника (3 ≤ P ≤ 10<sup>9</sup>).
+
+  <h4>Формат вывода</h4>
+  <p>В первой строке выведите три целых числа — длины сторон треугольника с заданным периметром и наибольшей площадью. Во второй сторке выведите три целых числа — длины сторон треугольника с заданным периметром и наименьшей ненулевой площадью. Если решений несколько, выведите любое. Если целочисленных треугольников заданного периметра не существует, выведите -1.</p>
+
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+    <code>3</code>
+<pre>
+1 1 1
+1 1 1
+</pre>
+
+    <h4>Пример 2</h4>
+    <code>4</code>
+    <code>-1</code>
+    <ul>
+      <li>В первой группе тестов 3 ≤ P ≤ 100. Эта группа тестов оценивается в 32 балла.</li>
+      <li>Во второй группе тестов 3 ≤ P ≤ 10<sup>6</sup>. Эта группа тестов оценивается в 33 балла.</li>
+      <li>В третьей группе тестов дополнительых ограничений нет. Эта группа тестов оценивается в 35 баллов.</li>
+    </ul>
+  </details>
+</article>
