--- a/src/components/alg/alg-ta/ta2/pages/elem-l1bdz.html
+++ b/src/components/alg/alg-ta/ta2/pages/elem-l1bdz.html
@@ -9,3 +9,262 @@
   <h4>Домашнее задание по лекции 1 дивизион B</h4>
   <p><a href="https://contest.yandex.ru/contest/28730/problems/" target="_blank">contest.yandex.ru/contest/28730/problems</a></p>
 </article>
+
+<!-- Содержание -->
+<article class="article">
+  <h3>Содержание</h3>
+
+      <a href="#t1">A. Interactor</a>
+  <br><a href="#t2">B. Кольцевая линия метро</a>
+  <br><a href="#t3">C. Даты</a>
+  <br><a href="#t4">D. Строительство школы</a>
+  <br><a href="#t5">E. Точка и треугольник</a>
+</article>
+
+
+<!-- A. Interactor -->
+<article class="article">
+  <div class="anchor" id="t1"></div>
+  <h3>A. Interactor</h3>
+
+  <div class="time-memory">(Время 1с. Память 256мб)</div>
+
+  <p>Лена руководит разработкой тестирующей системы, в которой реализованы интерактивные задачи.</p>
+
+  <p>До заверщения очередной стадии проекта осталось написать модуль, определяющий итоговый вердикт системы для интерактивной задачи. Итоговый вердикт определяется из кода завершения задачи, вердикта интерактора и вердикта чекера по следующим правилам:</p>
+  <ul>
+    <li>Вердикт чекера и вердикт интерактора — это целые числа от 0 до 7 включительно.</li>
+    <li>Код завершения задачи — это целое число от -128 до 127 включительно.</li>
+    <li>Если интерактор выдал вердикт 0, итоговый вердикт равен 3 в случае, если программа завершилась с ненулевым кодом, и вердикту чекера в противном случае.</li>
+    <li>Если интерактор выдал вердикт 1, итоговый вердикт равен вердикту чекера.</li>
+    <li>Если интерактор выдал вердикт 4, итоговый вердикт равен 3 в случае, если программа завершилась с ненулевым кодом, и 4 в противном случае.</li>
+    <li>Если интерактор выдал вердикт 6, итоговый вердикт равен 0.</li>
+    <li>Если интерактор выдал вердикт 7, итоговый вердикт равен 1.</li>
+    <li>В остальных случаях итоговый вердикт равен вердикту интерактора.</li>
+  </ul>
+  <p>Ваша задача — реализовать этот модуль.</p>
+
+  <h4>Формат ввода</h4>
+  <p>Входной файл состоит из трёх строк. В первой задано целое число r (-128 ≤ r ≤ 127) — код завершения задачи, во второй — целое число i (0 ≤ i ≤ 7) — вердикт интерактора, в третьей — целое число c (0 ≤ c ≤ 7) — вердикт чекера.</p>
+
+  <h4>Формат вывода</h4>
+  <p>Выведите одно целое число от 0 до 7 включительно — итоговый вердикт системы.</p>
+
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+<pre>
+0
+0
+0
+</pre>
+    <code>0</code>
+
+    <h4>Пример 2</h4>
+<pre>
+-1
+0
+1
+</pre>
+    <code>3</code>
+
+    <h4>Пример 3</h4>
+<pre>
+42
+1
+6
+</pre>
+    <code>6</code>
+
+    <h4>Пример 4</h4>
+<pre>
+44
+7
+4
+</pre>
+    <code>1</code>
+
+    <h4>Пример 5</h4>
+<pre>
+1
+4
+0
+</pre>
+    <code>3</code>
+
+    <h4>Пример 6</h4>
+<pre>
+-3
+2
+4
+</pre>
+    <code>2</code>
+  </details>
+</article>
+
+
+<!-- B. Кольцевая линия метро -->
+<article class="article">
+  <div class="anchor" id="t2"></div>
+  <h3>B. Кольцевая линия метро</h3>
+
+  <div class="time-memory">(Время 1с. Память 64мб)</div>
+
+  <p>Витя работает недалеко от одной из станций кольцевой линии Московского метро, а живет рядом с другой станцией той же линии. Требуется выяснить, мимо какого наименьшего количества промежуточных станций необходимо проехать Вите по кольцу, чтобы добраться с работы домой.</p>
+
+  <h4>Формат ввода</h4>
+  <p>Станции пронумерованы подряд натуральными числами 1, 2, 3, …, N (1-я станция – соседняя с N-й), N не превосходит 100.</p>
+
+  <p>Вводятся три числа: сначала N – общее количество станций кольцевой линии, а затем i и j – номера станции, на которой Витя садится, и станции, на которой он должен выйти. Числа i и j не совпадают. Все числа разделены пробелом.</p>
+
+  <h4>Формат вывода</h4>
+  <p>Требуется выдать минимальное количество промежуточных станций (не считая станции посадки и высадки), которые необходимо проехать Вите.</p>
+
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+    <code>100 5 6</code>
+    <code>0</code>
+
+    <h4>Пример 2</h4>
+    <code>10 1 9</code>
+    <code>1</code>
+    <p>Пояснения к примерам:</p>
+    <ol>
+      <li>На кольцевой линии 100 станций; проехать с 5-й на 6-ю станцию Витя может напрямую, без промежуточных станций</li>
+      <li>На кольцевой линии 10 станций; проехать с 1-й на 9-ю станцию Витя может через одну промежуточную, ее номер 10</li>
+    </ol>
+  </details>
+</article>
+
+
+<!-- C. Даты -->
+<article class="article">
+  <div class="anchor" id="t3"></div>
+  <h3>C. Даты</h3>
+
+  <div class="time-memory">(Время 2с. Память 256мб)</div>
+
+  <p>Как известно, два наиболее распространённых формата записи даты — это европейский (сначала день, потом месяц, потом год) и американски (сначала месяц, потом день, потом год). Системный администратор поменял дату на одном из бэкапов и сейчас хочет вернуть дату обратно. Но он не проверил, в каком формате дата используется в системе. Может ли он обойтись без этой информации?</p>
+
+  <p>Иначе говоря, вам даётся запись некоторой корректной даты. Требуется выяснить, однозначно ли по этой записи определяется дата даже без дополнительной информации о формате.</p>
+
+  <h4>Формат ввода</h4>
+  <p></p>Первая строка входных данных содержит три целых числа — x, y и z (1 ≤ x ≤ 31, 1 ≤ y ≤ 31, 1970 ≤ z ≤ 2069. Гарантируется, что хотя бы в одном формате запись x y z задаёт корректную дату.
+
+  <h4>Формат вывода</h4>
+  <p>Выведите 1, если дата определяется однозначно, и 0 в противном случае.</p>
+
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+    <code>1 2 2003</code>
+    <code>0</code>
+
+    <h4>Пример 2</h4>
+    <code>2 29 2008</code>
+    <code>1</code>
+    <p>В первом примере при одной системе записи дата равна 1 февраля, при другой - 2 января 2003 года, то есть однозначно назвать дату не получается.</p>
+
+    <p>Во втором примере корректный вариант даты может быть только в американском формате, где она задаёт 29 февраля 2008 года.</p>
+  </details>
+</article>
+
+
+<!-- D. Строительство школы -->
+<article class="article">
+  <div class="anchor" id="t4"></div>
+  <h3>D. Строительство школы</h3>
+
+  <div class="time-memory">(Время 1с. Память 64мб)</div>
+
+  <p>В деревне Интернетовка все дома расположены вдоль одной улицы по одну сторону от нее. По другую сторону от этой улицы пока ничего нет, но скоро все будет – школы, магазины, кинотеатры и т.д.</p>
+
+  <p>Для начала в этой деревне решили построить школу. Место для строительства школы решили выбрать так, чтобы суммарное расстояние, которое проезжают ученики от своих домов до школы, было минимально.</p>
+
+  <p>План деревни можно представить в виде прямой, в некоторых целочисленных точках которой находятся дома учеников. Школу также разрешается строить только в целочисленной точке этой прямой (в том числе разрешается строить школу в точке, где расположен один из домов – ведь школа будет расположена с другой стороны улицы).</p>
+
+  <p>Напишите программу, которая по известным координатам домов учеников поможет определить координаты места строительства школы.</p>
+
+  <h4>Формат ввода</h4>
+  <p>Сначала вводится число N — количество учеников (0 &lt; N &lt; 100001). Далее идут в строго возрастающем порядке координаты домов учеников — целые числа, не превосходящие 2x10<sup>9</sup> по модулю.</p>
+
+  <h4>Формат вывода</h4>
+  <p>Выведите одно целое число — координату точки, в которой лучше всего построить школу. Если ответов несколько, выведите любой из них.</p>
+
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+<pre>
+4
+1 2 3 4
+</pre>
+    <code>3</code>
+
+    <h4>Пример 2</h4>
+<pre>
+3
+-1 0 1
+</pre>
+    <code>0</code>
+  </details>
+</article>
+
+
+<!-- E. Точка и треугольник -->
+<article class="article">
+  <div class="anchor" id="t5"></div>
+  <h3>E. Точка и треугольник</h3>
+
+  <div class="time-memory">(Время 1с. Память 64мб)</div>
+
+  <p>На координатной плоскости расположены равнобедренный прямоугольный треугольник ABC с длиной катета d и точка X. Катеты треугольника лежат на осях координат, а вершины расположены в точках: A (0,0), B (d,0), C (0,d).</p>
+
+  <p>Напишите программу, которая определяет взаимное расположение точки X и треугольника. Если точка X расположена внутри или на сторонах треугольника, выведите 0. Если же точка находится вне треугольника, выведите номер ближайшей к ней вершины.</p>
+
+  <h4>Формат ввода</h4>
+  <p>Сначала вводится натуральное число d (не превосходящее 1000), а затем координаты точки X – два целых числа из диапазона от -1000 до 1000.</p>
+
+  <h4>Формат вывода</h4>
+  <p>Если точка лежит внутри, на стороне треугольника или совпадает с одной из вершин, то выведите число 0. Если точка лежит вне треугольника, то выведите номер вершины треугольника, к которой она расположена ближе всего (1 – к вершине A, 2 – к B, 3 – к C). Если точка расположена на одинаковом расстоянии от двух вершин, выведите ту вершину, номер которой меньше.</p>
+
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+<pre>
+5
+1 1
+</pre>
+    <code>0</code>
+
+    <h4>Пример 2</h4>
+<pre>
+3
+-1 -1
+</pre>
+    <code>1</code>
+
+    <h4>Пример 3</h4>
+<pre>
+4
+4 4
+</pre>
+    <code>2</code>
+
+    <h4>Пример 4</h4>
+<pre>
+4
+2 2
+</pre>
+    <code>0</code>
+    <p>Комментарии к примерам тестов</p>
+
+    <p>1. Точка лежит внутри треугольника.</p>
+
+    <p>2. Точка лежит вне треугольника и ближе всего к ней вершина A</p>
+
+    <p>3. Точка лежит на равном расстоянии от вершин B и C,в этом случае нужно вывести ту вершину, у которой номер меньше, т.е. выведено должно быть число 2</p>
+
+    <p>4. Точка лежит на стороне треугольника.</p>
+  </details>
+</article>
