--- a/src/components/alg/alg-ta/ta2/pages/elem-l2adz.html
+++ b/src/components/alg/alg-ta/ta2/pages/elem-l2adz.html
@@ -9,3 +9,232 @@
   <h4>Домашнее задание по лекции 2 дивизион А</h4>
   <p><a href="https://contest.yandex.ru/contest/28736/problems/" target="_blank">contest.yandex.ru/contest/28736/problems</a></p>
 </article>
+
+
+<!-- Содержание -->
+<article class="article">
+  <h3>Содержание</h3>
+
+      <a href="#t1">A. Забавный конфуз</a>
+  <br><a href="#t2">B. Изобретательный Петя</a>
+  <br><a href="#t3">C. Шахматная доска</a>
+  <br><a href="#t4">D. Петя, Маша и верёвочки</a>
+  <br><a href="#t5">E. Газон</a>
+</article>
+
+
+<!-- A. Забавный конфуз -->
+<article class="article">
+  <div class="anchor" id="t1"></div>
+  <h3>A. Забавный конфуз</h3>
+
+  <div class="time-memory">(Время 1с. Память 64мб)</div>
+
+  <p>Пусть A — массив, состоящий из N элементов A1, …, AN. Обозначим его максимальное и минимальное значение через max(A) и min(A) соответственно. Вычислим сумму элементов S, S = A1 + A2 + … + AN. Заменим каждый элемент массива на разницу S и этого элемента:</p>
+  <code>Ai := S-Ai, 1 ⩽ i ⩽ N.</code>
+
+  <p>Такое преобразование массива A назовем операцией Confuse. Напишите программу, которая по массиву B, полученному в результате K-кратного применения операции Confuse к некоторому массиву A, вычислит разность max(A)-min(A).</p>
+
+  <h4>Формат ввода</h4>
+  <p></p>Первая строка входного файла содержит целые числа N и K, где N — количество элементов массива B (2 ⩽ N ⩽ 10000), а K — количество применений операции Confuse к начальному массиву A, 1 ⩽ K ⩽ 100. Вторая строка файла содержит N элементов массива B. Элементы массива B — целые числа, принадлежащие диапазону от -2000000000 до 2 000 000000.
+
+  <h4>Формат вывода</h4>
+  <p>Единственная строка выходного файла должна содержать целое число - разность max(A) и min(A).</p>
+
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+<pre>
+4 2
+45 52 47 46
+</pre>
+    <code>7</code>
+  </details>
+</article>
+
+
+<!-- B. Изобретательный Петя -->
+<article class="article">
+  <div class="anchor" id="t2"></div>
+  <h3>B. Изобретательный Петя</h3>
+
+  <div class="time-memory">(Время 1с. Память 64мб)</div>
+
+  <p>Петя нашел на чердаке старый телеграфный аппарат и приделал к нему хитроумное устройство, которое может печатать на телеграфной ленте определенное слово (обозначим его X). Петино устройство может напечатать на ленте это слово сколько угодно раз. Петя может заставить аппарат напечатать на ленте и любое другое сообщение, но для этого ему нужно разобрать свое хитроумное устройство, и после этого он уже не сможет печатать сообщение X. А самое главное, что напечатать даже один символ другого сообщения потребует от Пети больше усилий, чем напечатать на ленте слово X с помощью хитроумного устройства.</p>
+
+  <p>Петя хочет сделать так, чтобы всем казалось, что ему по телеграфу пришло сообщение Z. Для этого он может (строго в этой последовательности):</p>
+  <ul>
+    <li>сколько угодно раз напечатать сообщение X</li>
+    <li>разобрать хитроумное устройство и посимвольно напечатать еще что-нибудь (назовем это Y)</li>
+    <li>оторвать и выбросить начало ленты так, чтобы на оставшейся ленте было напечатано в точности сообщение Z</li>
+  </ul>
+
+  <p>Поскольку набирать отдельные символы сообщения Y довольно сложно, Петя хочет, чтобы в сообщении Y было как можно меньше символов.</p>
+
+  <p>Для лучшего понимания задачи смотрите примеры и пояснения к ним.</p>
+
+  <h4>Формат ввода</h4>
+  <p>В первой строке вводится слово X, которое Петя может печатать с помощью хитроумного устройства сколько угодно раз. Во второй строке вводится сообщение Z, которое хочет получить Петя. Каждое сообщение состоит только из маленьких латинских букв и имеет длину не более 100 символов.</p>
+
+  <h4>Формат вывода</h4>
+  <p>Выведите минимальное по длине сообщение Y, которое Пете придется допечатать вручную.</p>
+
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+<pre>
+mama
+amamam
+</pre>
+    <code>m</code>
+
+    <h4>Пример 2</h4>
+<pre>
+ura
+mura
+</pre>
+    <code>mura</code>
+
+    <h4>Пример 3</h4>
+<pre>
+computer
+comp
+</pre>
+    <code>comp</code>
+
+    <h4>Пример 4</h4>
+<pre>
+ejudge
+judge
+</pre>
+    <code></code>
+
+    <h4>Пример 5</h4>
+<pre>
+m
+mmm
+</pre>
+    <code></code>
+    <p>1. Сначала Петя два раза напечатает слово mama, потом к нему припечатает букву m, а затем отрежет и выбросит три начальных символа (mam). Ответом является допечатываемая отдельно буква m.</p>
+
+    <p>2. Казалось бы, Пете стоит сначала напечатать букву m, а затем слово ura, которое он умеет печатать. Однако для того, чтобы напечатать m, ему придется разобрать свое устройство, и печатать ura ему придется также посимвольно.</p>
+
+    <p>3. Казалось бы, Петя может напечатать слово computer, а затем отрезать и выбросить его конец — однако он не может так поступить, потому что отрезать и выбросить он может только начало ленты.</p>
+
+    <p>4. Пете достаточно один раз напечатать слово ejudge, а затем отрезать и выбросить букву e. Ничего посимвольно выводить ему не придется, поэтому ответом является пустая строка.</p>
+
+    <p>5. Достаточно трижды напечатать исходное слово и нужный результат будет получен. Ничего добавлять не надо, поэтому ответ – пустая строка.</p>
+  </details>
+</article>
+
+
+<!-- C. Шахматная доска -->
+<article class="article">
+  <div class="anchor" id="t3"></div>
+  <h3>C. Шахматная доска</h3>
+
+  <div class="time-memory">(Время 1с. Память 64мб)</div>
+
+  <p>Из шахматной доски по границам клеток выпилили связную (не распадающуюся на части) фигуру без дыр. Требуется определить ее периметр.</p>
+
+  <h4>Формат ввода</h4>
+  <p>Сначала вводится число N (1 ≤ N ≤ 64) – количество выпиленных клеток. В следующих N строках вводятся координаты выпиленных клеток, разделенные пробелом (номер строки и столбца – числа от 1 до 8). Каждая выпиленная клетка указывается один раз.</p>
+
+  <h4>Формат вывода</h4>
+  <p>Выведите одно число – периметр выпиленной фигуры (сторона клетки равна единице).</p>
+
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+<pre>
+3
+1 1
+1 2
+2 1
+</pre>
+    <code>8</code>
+
+    <h4>Пример 2</h4>
+<pre>
+1
+8 8
+</pre>
+    <code>4</code>
+    <p>1. Вырезан уголок из трех клеток. Сумма длин его сторон равна 8.</p>
+
+    <p>2. Вырезана одна клетка. Ее периметр равен 4.</p>
+  </details>
+</article>
+
+
+<!-- D. Петя, Маша и верёвочки -->
+<article class="article">
+  <div class="anchor" id="t1"></div>
+  <h3>D. Петя, Маша и верёвочки</h3>
+
+  <div class="time-memory">(Время 1с. Память 512мб)</div>
+
+  <p>На столе лежали две одинаковые верёвочки целой положительной длины.</p>
+
+  <p>Петя разрезал одну из верёвочек на N частей, каждая из которых имеет целую положительную длину, так что на столе стало N + 1 верёвочек. Затем в комнату зашла Маша и взяла одну из лежащих на столе верёвочек. По длинам оставшихся на столе N верёвочек определите, какую наименьшую длину может иметь верёвочка, взятая Машей.</p>
+
+  <h4>Формат ввода</h4>
+  <p>Первая строка входных данных содержит одно целое число N — количество верёвочек, оставшихся на столе (2 ≤ N ≤ 1000). Во второй строке содержится N целых чисел li — длины верёвочек (1 ≤ li ≤ 1000).</p>
+
+  <h4>Формат вывода</h4>
+  <p>Выведите одно целое число — наименьшую длину, которую может иметь верёвочка, взятая Машей.</p>
+
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+<pre>
+4
+1 5 2 1
+</pre>
+    <code>1</code>
+
+    <h4>Пример 2</h4>
+<pre>
+4
+5 12 4 3
+</pre>
+    <code>24</code>
+  </details>
+</article>
+
+
+<!-- E. Газон -->
+<article class="article">
+  <div class="anchor" id="t5"></div>
+  <h3>E. Газон</h3>
+
+  <div class="time-memory">(Время 1с. Память 64мб)</div>
+
+  <p>Фермер Иван с юности следит за своим газоном. Газон можно считать плоскостью, на которой в каждой точке с целыми координатами растет один пучок травы.</p>
+
+  <p>В одно из воскресений Иван воспользовался газонокосилкой и постриг некоторый прямоугольный участок газона. Стороны этого участка параллельны осям координат, а две противоположные вершины расположены в точках (x1, y1) и (x2, y2). Следует отметить, что пучки травы, находящиеся на границе этого прямоугольника, также были пострижены.</p>
+
+  <p>Довольный результатом Иван купил и установил на газоне дождевальную установку. Она была размещена в точке с координатами (x3, y3) и имела радиус действия струи r. Таким образом, установка начала поливать все пучки, расстояние от которых до точки (x3, y3) не превышало r.</p>
+
+  <p>Все было хорошо, но Ивана заинтересовал следующий вопрос: сколько пучков травы оказалось и пострижено, и полито в это воскресенье?</p>
+
+  <p>Требуется написать программу, которая позволит дать ответ на вопрос Ивана.</p>
+
+  <h4>Формат ввода</h4>
+  <p>В первой строке входного файла содержатся четыре целых числа x1, y1, x2, y2 (-100 000 ≤ x1 &lt; x2 ≤ 100 000; -100 000 ≤ y1 &lt; y2 ≤ 100 000).</p>
+
+  <p>Во второй строке входного файла содержатся три целых числа x3, y3, r (-100 000 ≤ x3, y3 ≤ 100 000; 1 ≤ r ≤ 100 000)</p>
+
+  <h4>Формат вывода</h4>
+  <p>В выходной файл необходимо вывести одно целое число — число пучков травы, которые были и пострижены, и политы.</p>
+
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+<pre>
+0 0 5 4
+4 0 3
+</pre>
+    <code>14</code>
+  </details>
+</article>
