--- a/src/components/alg/alg-ta/ta2/pages/elem-l2bdz.html
+++ b/src/components/alg/alg-ta/ta2/pages/elem-l2bdz.html
@@ -9,3 +9,61 @@
   <h4>Домашнее задание по лекции 2 дивизион B</h4>
   <p><a href="https://contest.yandex.ru/contest/28738/problems/" target="_blank">contest.yandex.ru/contest/28738/problems</a></p>
 </article>
+
+
+<!-- Содержание -->
+<article class="article">
+  <h3>Содержание</h3>
+
+      <a href="#t1">A. Количество равных максимальному</a>
+  <br><a href="#t2">B. Дома и магазины</a>
+</article>
+
+
+<!-- A. Количество равных максимальному -->
+<article class="article">
+  <div class="anchor" id="t1"></div>
+  <h3>A. Количество равных максимальному</h3>
+
+  <div class="time-memory">(Время 1с. Память 64мб)</div>
+
+
+<!-- A. Количество равных максимальному -->
+<article class="article">
+  <div class="anchor" id="t1"></div>
+  <h3>A. Количество равных максимальному</h3>
+
+  <div class="time-memory">(Время 1с. Память 64мб)</div>
+
+  <p>Последовательность состоит из натуральных чисел и завершается числом 0. Всего вводится не более 10000 чисел (не считая завершающего числа 0). Определите, сколько элементов этой последовательности равны ее наибольшему элементу.</p>
+
+  <p>Числа, следующие за числом 0, считывать не нужно.</p>
+
+  <h4>Формат ввода</h4>
+  <p>Вводится последовательность целых чисел, оканчивающаяся числом 0 (само число 0 в последовательность не входит).</p>
+
+  <h4>Формат вывода</h4>
+  <p>Выведите ответ на задачу.</p>
+
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+<pre>
+1
+7
+9
+0
+</pre>
+    <code>1</code>
+
+    <h4>Пример 2</h4>
+<pre>
+1
+3
+3
+1
+0
+</pre>
+    <code>2</code>
+  </details>
+</article>
