--- a/src/components/alg/alg-ta/ta4/pages/elem-l3.html
+++ b/src/components/alg/alg-ta/ta4/pages/elem-l3.html
@@ -4,10 +4,9 @@
 <article class="article">
   <h2>Михаил Густокашин</h2>
   <p>Конспект курса <strong>Тренировки по алгоритмам 4.0</strong> (с 2023.11.01 до 2023.11.18)</p>
+  <p><a href="https://yandex.ru/yaintern/training/algorithm-training_oct_2023" target="_blank">yandex.ru/yaintern/training/algorithm-training_oct_2023</a></p>
 
   <h4>Лекция 3 Кратчайшие пути во взвешенных графах</h4>
-  <p><a href="https://yandex.ru/yaintern/algorithm-training_2021">yandex.ru/yaintern/algorithm-training_2021</a></p>
-  <p><a href="https://contest.yandex.ru/contest/27393/problems/">Задачи</a></p>
   <p>2023-11-09 Лекция 3 Кратчайшие пути во взвешенных графах.mp4</p>
 </article>
 
